# fullstack-template

./: README.md
backend/: LICENSE  README.md  pyproject.toml
backend/src/: constants.py  main.py  root.py  router.py
frontend/: index.html  package.json
frontend/src/: App.tsx
